# sengsgx

./: .gitmodules  README.md  TODO.md
base_container/: Dockerfile  README.md  docker-compose.yaml
benchmarking/: .gitignore  README.md  build_bench_progs.bash  download_bench_progs.bash
benchmarking/curl/: .gitignore  benchmark_native_curl.bash  benchmark_pure_curl.bash  benchmark_seng_curl.bash  curl_format.txt  curl_format_extended.txt  curl_pure.manifest  curl_pure_test.bash  curl_seng  curl_seng.manifest  test_pure_curl.bash  test_seng_curl.bash
benchmarking/iperf3/: .gitignore  benchmark_native_iperf.bash  benchmark_pure_iperf.bash  benchmark_seng_iperf.bash  iperf3_pure  iperf3_pure.manifest  iperf3_seng.manifest  iperf_pure_test.bash  iperf_seng_test.bash  test_pure_iperf.bash  test_seng_iperf.bash
benchmarking/microbench/: .gitignore  CMakeLists.txt  mbench_pure.bash  mbench_seng.bash  middlebox_cert.pem  prog_pure_setup.c  pure_mbench.manifest  seng_mbench.manifest
benchmarking/nginx/: bench_with_wrk2.bash  nginx_pure  nginx_pure.manifest  nginx_pure_test.bash  nginx_seng.manifest  test_native_nginx.bash  (+2 more)
patches/: INFO.md  README.md  enclave_side__sgx-ra-tls_my_changes.patch  fixed_exitless_syscalls_pr405.patch  gateway_side__sgx-ra-tls_my_changes.patch  graphene_patches.patch  pull_request_438.patch  sgx-ra-tls_seng_changes.patch  total_lwip_patcher.patch
sample_logs/: README.md
seng_runtime/: Dockerfile  README.md  bootup.bash  docker-compose.yaml
seng_runtime/lwip_based_client_lib/: CMakeLists.txt
seng_runtime/lwip_based_client_lib/demo_app/: .gitignore  CMakeLists.txt  demoapp.manifest  main.c  middlebox_cert.pem  run_demoapp.bash
seng_runtime/lwip_based_client_lib/dtls_tunnel_netif/cmake/: FindAttesterLib.cmake  FindAttesterLibOpenSSL.cmake  FindCURL.cmake  FindChallengerLib.cmake  FindChallengerLibOpenSSL.cmake  FindLinuxlwIP.cmake  FindMBEDTLS.cmake  FindProtobuf-c.cmake
seng_runtime/lwip_based_client_lib/dtls_tunnel_netif/include/: DT_OnLoadSENGStarter_OpenSSL.hpp  DT_RaSSLTunnelNetif_OpenSSL.hpp  DT_SSLEngineClient_OpenSSL.hpp  HookCommons.hpp  PreloadHooker.hpp  th-lock.h
seng_runtime/lwip_based_client_lib/dtls_tunnel_netif/include/bench_app_thread/: OnLoadAppBench.hpp
seng_runtime/lwip_based_client_lib/dtls_tunnel_netif/include/hooks/: getinfo.hpp  listen_shadow.hpp  polling.hpp  receiving.hpp  sending.hpp  sockctrl.hpp  sockets.hpp
seng_runtime/lwip_based_client_lib/dtls_tunnel_netif/src/: CMakeLists.txt  DT_OnLoadSENGStarter_OpenSSL.cpp  DT_RaSSLTunnelNetif_OpenSSL.cpp  DT_SSLEngineClient_OpenSSL.cpp  PreloadHooker.cpp  ra_tls_options.c  seng.proto  th-lock.c
seng_runtime/lwip_based_client_lib/dtls_tunnel_netif/src/bench_app_thread/: OnLoadAppBench.cpp
seng_runtime/lwip_based_client_lib/dtls_tunnel_netif/src/hooks/: getinfo.cpp  listen_shadow.cpp  polling.cpp  receiving.cpp  sending.cpp  sockctrl.cpp  sockets.cpp
seng_runtime/lwip_based_client_lib/include/: lwipopts.h
seng_sdk/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_patched_sdkpsw_sgxssl.bash  docker-compose.yaml  fetch_external_apps.bash  fetch_external_libs.bash  reinstall_patched_sdkpsw_sgxssl.bash  sdk_docker_bootstrap.bash
seng_sdk/app/: CMakeLists.txt
seng_sdk/app/app/src/: CMakeLists.txt  app.cpp  app.h
seng_sdk/app/seng/src/: CMakeLists.txt  untrusted_seng.cpp  untrusted_seng.hpp
seng_sdk/cmake/: FindCURL.cmake  FindSGX.cmake
seng_sdk/enclave/app/src/: CMakeLists.txt  app_enclave.config.xml  app_enclave.cpp  app_enclave.edl  app_enclave.h  app_enclave.lds
seng_sdk/enclave/seng/include/: seng.edl  seng_api.hpp  seng_utils.h
seng_sdk/enclave/seng/src/: CMakeLists.txt  DT_SSLEngineClient_OpenSSL.cpp  DT_SSLEngineClient_OpenSSL.hpp  ra_tls_options.c  seng.lds  seng.pb-c.c  seng.pb-c.h  seng.proto  seng_api.cpp  seng_tunnelmodule.cpp  seng_tunnelmodule.hpp  seng_utils.cpp
seng_sdk/patches/lwip/: extfixes_and_our_posixpatch.patch  prevent_endian_redefs.patch
seng_sdk/patches/protobuf/: CMakeLists.txt
seng_sdk/patches/protobuf/tlib/: CMakeLists.txt
seng_sdk/patches/psw_sdk/: README  WIP_timedwait_sdk_psw.patch  sdk_workaround_fix.patch
seng_sdk/patches/sgxssl/: bss_dgram.c  build_openssl.sh  bypass_to_sgxssl.h  dtls1.h  openssl_recv_and_timeout.patch  sgx_tsgxssl.edl  sgxssl_seng.patch
seng_sdk/patches/sgxssl/libsgx_tsgxssl/: Makefile  tmissing_bss_dgram.cpp  tmissing_tls.cpp  tsocket.cpp  tunistd.cpp
seng_sdk/patches/sgxssl/sgx/: Makefile
seng_sdk/ported_external_apps/: SENG_NGINX_README  WIP_nginx_seng.patch  app_enclave_private.pem  app_enclave_public.pem  build_seng_nginx.bash  mini_nginx.conf  ngx_seng_enclave.config.xml
seng_server/: .gitignore  Dockerfile  README.md  cli_socket_blocker  docker-compose.yaml  setup_seng_interface.bash  teardown_seng_interface.bash
seng_server/double_tunnel_openssl/: CMakeLists.txt  seng_db_creator.sql  seng_netfilter_db_creator.sql
seng_server/double_tunnel_openssl/cmake/: FindChallengerLibOpenSSL.cmake  FindLibUV.cmake  FindMBEDTLS.cmake
seng_server/double_tunnel_openssl/include/: EncIdxBase.hpp  EnclaveIndex_adapted.hpp  EnclaveNetfilterIndex.hpp  EnclaveSqlite3Index.hpp  OpenSSLUVCallbacks.hpp  PacketForwarder_adapted.hpp  SSLEngine.hpp  SSLEngine_OpenSSL.hpp  SengMain_adapted.hpp  SengServer_OpenSSL.hpp  TunnelToEnclave_OpenSSL.hpp
seng_server/double_tunnel_openssl/include/enc_srv_socks/: ClientSocketShadower_adapted.hpp  ShadowRule.hpp
seng_server/double_tunnel_openssl/src/: CMakeLists.txt  EncIdxBase.cpp  EnclaveIndex_adapted.cpp  EnclaveNetfilterIndex.cpp  EnclaveSqlite3Index.cpp  MbedtlsUVCallbacks.cpp  OpenSSLUVCallbacks.cpp  PacketForwarder_adapted.cpp  SSLEngine_OpenSSL.cpp  SengMain_adapted.cpp  SengServer_OpenSSL.cpp  TunnelToEnclave_OpenSSL.cpp  seng.proto
seng_server/double_tunnel_openssl/src/enc_srv_socks/: ClientSocketShadower_adapted.cpp  ShadowRule.cpp
tools/: README.md
tools/cli_socket_blocker/: CMakeLists.txt  CliSockBlocker.cpp  README.md  SSLEngine.cpp  SSLEngine.hpp  seng.proto
tools/cli_socket_blocker/cmake/: FindMBEDTLS.cmake
(+43 files in other folders)
